Fix stripe width on mobile

--- a/source/_scss/partials/_header.scss
+++ b/source/_scss/partials/_header.scss
@@ -46,7 +46,8 @@
     }
     
     .stripe {
-        width: 300px;
+        width: 100%;
+        max-width: 300px;
         margin: 20px auto;
     }
 }
